<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:id="@+id/constus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:gravity="center_horizontal"
            android:text="@string/no_connection"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_add"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableLeft="@drawable/user"
            android:enabled="false"
            android:text="@string/add_client"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/nav_search"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:drawableLeft="@drawable/search"
            android:enabled="false"
            android:text="@string/search"
            android:textColor="@android:color/black" />
    </LinearLayout>


    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/container"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</LinearLayout>